# InteractiveStreams

./: .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  TESTING.md  build_err.txt  build_out.txt  cmake_out.txt  docker-compose.yml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: README.md
assets/fonts/: .gitkeep
assets/shaders/: bloom.frag  chromatic_aberration.frag  crt.frag  vignette.frag
cmake/: CopyIfStale.cmake
config/: default.json
docs/: COOLIFY.md
src/: crash_handler.cpp  main.cpp  pch.h
src/core/: Application.cpp  Application.h  AudioManager.cpp  AudioManager.h  AudioMixer.cpp  AudioMixer.h  AvatarCache.cpp  AvatarCache.h  ChannelManager.cpp  ChannelManager.h  ChannelStats.h  Config.cpp  Config.h  GameManager.cpp  GameManager.h  Logger.cpp  Logger.h  PerfMonitor.cpp  PerfMonitor.h  PlayerDatabase.cpp  PlayerDatabase.h  ScoreboardConfig.h  SettingsDatabase.cpp  SettingsDatabase.h  Sha256.h  StreamInstance.cpp  StreamInstance.h  StreamManager.cpp  StreamManager.h  StreamProfile.cpp  StreamProfile.h
src/games/: GameRegistry.cpp  GameRegistry.h  IGame.h
src/games/chaos_arena/: Arena.cpp  Arena.h  ChaosArena.cpp  ChaosArena.h  ParticleSystem.cpp  ParticleSystem.h  PhysicsWorld.cpp  PhysicsWorld.h  Player.cpp  Player.h  PowerUp.cpp  PowerUp.h  Projectile.cpp  Projectile.h
src/games/color_conquest/: ColorConquest.cpp  ColorConquest.h  Grid.cpp  Grid.h  Team.h
src/games/country_elimination/: CountryAliases.h  CountryElimination.cpp  CountryElimination.h  QuizQuestions.h
src/games/gravity_brawl/: AvatarCache.cpp  AvatarCache.h  GravityBrawl.cpp  GravityBrawl.h
src/platform/: ChatMessage.h  IPlatform.h  PlatformManager.cpp  PlatformManager.h
src/platform/local/: LocalPlatform.cpp  LocalPlatform.h
src/platform/twitch/: TwitchApi.cpp  TwitchApi.h  TwitchPlatform.cpp  TwitchPlatform.h
src/platform/youtube/: YouTubeApi.cpp  YouTubeApi.h  YouTubeGrpcChat.cpp  YouTubeGrpcChat.h  YouTubeQuota.cpp  YouTubeQuota.h  YoutubePlatform.cpp  YoutubePlatform.h  youtube_chat.proto
src/rendering/: Background.cpp  Background.h  Camera.cpp  Camera.h  ParticleRenderer.cpp  ParticleRenderer.h  PostProcessing.cpp  PostProcessing.h  Renderer.cpp  Renderer.h  SpriteAnimator.cpp  SpriteAnimator.h  UIOverlay.cpp  UIOverlay.h
src/streaming/: StreamEncoder.cpp  StreamEncoder.h  StreamOutput.cpp  StreamOutput.h  stb_impl.cpp
src/web/: ApiRoutes.cpp  ApiRoutes.h  WebServer.cpp  WebServer.h
src/web/dashboard/: app.js  index.html  style.css
tests/: CMakeLists.txt  test_ChatMessage.cpp  test_ColorConquest.cpp  test_Config.cpp  test_GameRegistry.cpp  test_GravityBrawl.cpp  test_Grid.cpp  test_LocalPlatform.cpp  test_PhysicsWorld.cpp  test_Player.cpp  test_TextLayout.cpp  test_main.cpp
web/: package.json
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/app/audio/: page.tsx
web/src/app/auth/twitch/callback/: page.tsx
web/src/app/auth/youtube/callback/: page.tsx
web/src/app/channels/: page.tsx
web/src/app/chat/: page.tsx
web/src/app/games/: page.tsx
web/src/app/login/: page.tsx
web/src/app/performance/: page.tsx
web/src/app/profiles/: page.tsx
web/src/app/scoreboard/: page.tsx
web/src/app/settings/: page.tsx
web/src/app/statistics/: page.tsx
web/src/components/: app-shell.tsx  channel-card.tsx  stream-card.tsx  stream-preview.tsx
web/src/components/ui/: numeric-input.tsx
web/src/hooks/: use-status.ts
web/src/lib/: api.ts
